--- a/style.css
+++ b/style.css
@@ -310,7 +310,7 @@ body {
   width: 100%;
   height: 100vh;
   min-width: 285px;
-  max-width: 1000px;
+  /* max-width: 1000px; */
   padding: 20px;
   background: #fff;
   transition: all 500ms ease-in-out;
